--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,9 +9,7 @@
     <nav id="nav">
         <div class="inner-nav">
           <img class="logo" src="/assets/pq_logo_final.png" alt="">
-          <a class="sign-in" href="">
-            Sign In / Register
-          </a>
+          <a class="sign-in" href="/auth/google_oauth2">Sign In / Register</a>
         </div>
     </nav>
       <article class="banner">
