--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,9 +21,9 @@
       </article>
       <section class="middle">
         <article class="cat-dog-box">
-          <img class="animal-click" src="/assets/puppy_pic_433.jpg" alt="">
-          <img class="animal-click" src="/assets/cat_433.jpg" alt="">
-          <img class="animal-click" src="/assets/rabbits_fotor.jpg" alt="">
+          <img class="animal-click" src="/app/assets/images/puppy_pic_433.jpg" alt="">
+          <img class="animal-click" src="/app/assets/images/cat_433.jpg" alt="">
+          <img class="animal-click" src="/app/assets/images/rabbits_fotor.jpg" alt="">
         </article>
       </section>
     <article class="lower-banner">
