try to fix heroku images wip

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
   <body>
     <nav id="nav">
         <div class="inner-nav">
-          <img class="logo" src="/assets/images/pq_logo_final.png" alt="">
+          <img class="logo" src="/assets/pq_logo_final.png" alt="">
           <a class="sign-in" href="/auth/google_oauth2">Sign In / Register</a>
         </div>
     </nav>
@@ -21,9 +21,9 @@
       </article>
       <section class="middle">
         <article class="cat-dog-box">
-          <img class="animal-click" src="/assets/images/puppy_pic_433.jpg" alt="">
-          <img class="animal-click" src="/assets/images/cat_433.jpg" alt="">
-          <img class="animal-click" src="/assets/images/rabbits_fotor.jpg" alt="">
+          <img class="animal-click" src="/assets/puppy_pic_433.jpg" alt="">
+          <img class="animal-click" src="/assets/cat_433.jpg" alt="">
+          <img class="animal-click" src="/assets/rabbits_fotor.jpg" alt="">
         </article>
       </section>
     <article class="lower-banner">
