--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+    <nav id="nav">
+        <div class="inner-nav">
+          <img class="logo" src="/assets/pq_logo_final.png" alt="">
+          <a class="sign-in" href="<%= oauth_path(last_path: request.env['REQUEST_PATH']) %>">Sign In / Register</a>
+        </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
