--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <nav id="nav">
         <div class="inner-nav">
           <img class="logo" src="/assets/pq_logo_final.png" alt="">
-          <a class="sign-in" href="<%= oauth_path(last_path: request.env['REQUEST_PATH']) %>">Sign In / Register</a>
+          <a class="sign-in" href="<%= oauth_path(last_path: request.env['REQUEST_PATH']) %>">Sign In</a>
         </div>
     </nav>
     <%= yield %>
