--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,10 @@ body {
   margin: 0;
   background-image: url('https://oneadamtwelv.files.wordpress.com/2012/04/p5102156.jpg');
   background-size: cover;
+  background-attachment: fixed;
   font-family: 'Rock Salt', cursive;
+  color: white;
+
 }
 
 #nav {
