--- a/app/views/search/dogs/index.html.erb
+++ b/app/views/search/dogs/index.html.erb
@@ -1,40 +1,60 @@
-<form class="" action="/search/dogs" method="get">
-  <select name="breed">
-    <option value="">Any</option>
-    <option value="Golden Retriever">Golden Retriever</option>
-    <option value="Boxer">Boxer</option>
-  </select>
-  <select name="age">
-    <option value="">Any</option>
-    <option value="Baby">Baby</option>
-    <option value="Young">Young</option>
-    <option value="Adult">Adult</option>
-    <option value="Senior">Senior</option>
-  </select>
-  <select name="size">
-    <option value="">Any</option>
-    <option value="S">Small</option>
-    <option value="M">Medium</option>
-    <option value="L">Large</option>
-    <option value="XL">XL</option>
-  </select>
-  <select name="sex">
-    <option value="">Any</option>
-    <option value="M">Male</option>
-    <option value="F">Female</option>
-  </select>
-  <input type="submit" value="Search">
-</form>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  </head>
+  <body id="pet-search">
+<section>
+  <form class="search-form" action="/search/dogs" method="get">
+    <select class="dropdown" name="breed">
+      <option class="option" value="">Any</option>
+      <option value="Golden Retriever">Golden Retriever</option>
+      <option value="Boxer">Boxer</option>
+    </select>
+    <select class="dropdown" name="age">
+      <option class="option" value="">Any</option>
+      <option value="Baby">Baby</option>
+      <option value="Young">Young</option>
+      <option value="Adult">Adult</option>
+      <option value="Senior">Senior</option>
+    </select>
+    <select class="dropdown" name="size">
+      <option value="">Any</option>
+      <option value="S">Small</option>
+      <option value="M">Medium</option>
+      <option value="L">Large</option>
+      <option value="XL">XL</option>
+    </select>
+    <select class="dropdown" name="sex">
+      <option value="">Any</option>
+      <option value="M">Male</option>
+      <option value="F">Female</option>
+    </select>
+    <input class="dropdown submit" type="submit" value="Search">
+  </form>
+  <section id="search-area">
 
-<% if @dogs %>
-  <% @dogs.each do |dog| %>
-  <a href="/search/dogs/<%= dog.id %>">
-  <img src="<%= dog.photos.thumbnail_photo %>" alt="">
-</a>
-  <div>Name: <%= dog.name %></div>
-  <div>Breed: <%= dog.breeds %></div>
-  <div>Age: <%= dog.age %></div>
-  <div>Sex: <%= dog.sex %></div>
-  <div>Address: <%= dog.contact.full_address %></div>
+  <% if @dogs %>
+    <% @dogs.each do |dog| %>
+    <a class="card-link" href="/search/dogs/<%= dog.id %>">
+      <article class="pet-box">
+          <img class="thumbnail-pic" src="<%= dog.photos.thumbnail_photo %>" alt="">
+        <article class="pet-thumb-info">
+          <div class="pet-name"><%= dog.name %></div>
+          <div class="attribute"><%= dog.breeds %></div>
+          <div class="attribute"><%= dog.age %> <%= dog.sex %></div>
+          <div class="attribute"><%= dog.contact.street %></div>
+          <div class="attribute"><%= dog.contact.city_state_zip %></div>
+      </article>
+      </article>
+    </a>
+    <% end %>
   <% end %>
-<% end %>
+  </section>
+
+</section>
+
+  </body>
+</html>
