--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
+  <body id="the-business">
       <article class="banner">
         <div class="slogan-box">
           <div class="slogan-text">
