start styling dog show page

--- a/app/views/search/dogs/index.html.erb
+++ b/app/views/search/dogs/index.html.erb
@@ -8,11 +8,13 @@
   <body id="pet-search">
 <section>
   <form class="search-form" action="/search/dogs" method="get">
+    <div class="search-title">Breed</div>
     <select class="dropdown" name="breed">
       <option class="option" value="">Any</option>
       <option value="Golden Retriever">Golden Retriever</option>
       <option value="Boxer">Boxer</option>
     </select>
+    <div class="search-title">Age</div>
     <select class="dropdown" name="age">
       <option class="option" value="">Any</option>
       <option value="Baby">Baby</option>
@@ -20,6 +22,7 @@
       <option value="Adult">Adult</option>
       <option value="Senior">Senior</option>
     </select>
+    <div class="search-title">Size</div>
     <select class="dropdown" name="size">
       <option value="">Any</option>
       <option value="S">Small</option>
@@ -27,6 +30,7 @@
       <option value="L">Large</option>
       <option value="XL">XL</option>
     </select>
+    <div class="search-title">Gender</div>
     <select class="dropdown" name="sex">
       <option value="">Any</option>
       <option value="M">Male</option>
