--- a/app/assets/stylesheets/search/dogs/index.css
+++ b/app/assets/stylesheets/search/dogs/index.css
@@ -5,7 +5,8 @@
 .search-form {
   background-color: #CCCCCC;
   height: 80px;
-  border: 2px solid #4C4C4C;
+  border-bottom: .5px solid #605f5f;
+  border-top: .5px solid #605f5f;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,7 +20,7 @@
   margin-right: 15px;
   margin-bottom: 15px;
   background-color: #DBDBDB;
-  border: 1px solid #909690;
+  border: 1px solid #c4c4c4;
 
 }
 
@@ -61,20 +62,30 @@
 .dropdown {
   -webkit-appearance: none;
   border-radius: 10px;
-  border: 1px solid #DBDBDB;
+  background-color: #EDEDED;
+  border: .5px solid #605f5f;
   width: 200px;
   height: 50px;
   font-size: 20px;
   margin-right: 30px;
+  color: #605f5f;
+  padding-left: 10px;
+}
+
+.search-title {
+  margin-right: 10px;
+  color: #174B0A
 }
 
 .submit {
+  border: .5px solid #605f5f;
   background-color: green;
   color: white;
 }
 
 .option {
   width: 200px;
+  color: #605f5f;
 
 }
 
