--- a/app/views/search/dogs/show.html.erb
+++ b/app/views/search/dogs/show.html.erb
@@ -1,15 +1,24 @@
-<img src="<%= @dog.photos.profile_photo %>" alt="">
-<h1><%= @dog.name %></h1>
-<div><%= @dog.contact.full_address %></div>
-<div class="">Breed: <%= @dog.breeds %></div>
-<div class="">Age: <%= @dog.age %></div>
-<div class="">Gender: <%= @dog.sex %></div>
-<div class="">Size: <%= @dog.size %></div>
-<h3>Profile</h3>
-<p> <%= @dog.description %></p>
-<div>Contact Info:</div>
-<ul class="">
-  <li>Phone: <%= @dog.contact.number %></li>
-  <li>Email: <%= @dog.contact.email %></li>
-  <li>Email: <%= @dog.contact.email %></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body class="font-black">
+    <img src="<%= @dog.photos.profile_photo %>" alt="">
+    <h1><%= @dog.name %></h1>
+    <div><%= @dog.contact.full_address %></div>
+    <div class="">Breed: <%= @dog.breeds %></div>
+    <div class="">Age: <%= @dog.age %></div>
+    <div class="">Gender: <%= @dog.sex %></div>
+    <div class="">Size: <%= @dog.size %></div>
+    <h3>Profile</h3>
+    <p> <%= @dog.description %></p>
+    <div>Contact Info:</div>
+    <ul class="">
+      <li>Phone: <%= @dog.contact.number %></li>
+      <li>Email: <%= @dog.contact.email %></li>
+      <li>Email: <%= @dog.contact.email %></li>
+    </ul>
+  </body>
+</html>
