move dog search logic into presenter

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
       </article>
       <section class="middle">
         <article class="cat-dog-box">
-          <img class="animal-click" src="/assets/puppy_pic_433.jpg" alt="">
+          <a href="/search/dogs"><img class="animal-click" src="/assets/puppy_pic_433.jpg" alt=""></a>
           <img class="animal-click" src="/assets/cat_433.jpg" alt="">
           <img class="animal-click" src="/assets/rabbits_fotor.jpg" alt="">
         </article>
