--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,8 @@ body {
 #nav {
   width: 100%;
   height: 96px;
+  font-family: 'Rock Salt', cursive;
+  color: white;
   background-color: #006600;
   display: flex;
   align-items: center;
