--- a/app/views/shared/_log_in_nav.html.erb
+++ b/app/views/shared/_log_in_nav.html.erb
@@ -1,6 +1,6 @@
 <nav id="nav">
     <div class="inner-nav">
-      <img class="logo" src="/assets/pq_logo_final.png" alt="">
+      <div class="thinga logo"><a class="logo" href="<%= root_path %>"><img class="logo" src="/assets/pq_logo_final.png" alt=""></a></div>
       <a class="sign-in" href="<%= login_path(last_path: request.env['REQUEST_PATH']) %>">Sign In</a>
     </div>
 </nav>
