--- a/app/views/shared/_log_out_nav.html.erb
+++ b/app/views/shared/_log_out_nav.html.erb
@@ -1,8 +1,8 @@
 <nav id="nav">
     <div class="inner-nav">
-      <img class="logo" src="/assets/pq_logo_final.png" alt="">
+      <div class="thinga logo"><a class="logo" href="<%= root_path %>"><img class="logo" src="/assets/pq_logo_final.png" alt=""></a></div>
       <div class="right-nav">
-        <div class="">
+        <div class="welcome-message">
           <%= presenter.current_message %>
         </div>
         <a class="sign-in" href="<%= logout_path(last_path: request.env['REQUEST_PATH']) %>">Sign Out</a>
