refactor into service that can be used for both cats and dogs, full cat functionality

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
       <section class="middle">
         <article class="cat-dog-box">
           <a href="/search/dogs"><img class="animal-click" src="/assets/puppy_pic_433.jpg" alt=""></a>
-          <img class="animal-click" src="/assets/cat_433.jpg" alt="">
+          <a href="/search/cats"><img class="animal-click" src="/assets/cat_433.jpg" alt=""></a>
           <img class="animal-click" src="/assets/rabbits_fotor.jpg" alt="">
         </article>
       </section>
