--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,8 @@
   <body>
     <%= render "shared/#{presenter.current_navbar}" %>
     <%= yield %>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
+  </script>
+  <script src="index.js"></script>
   </body>
 </html>
