add script to main page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body id="the-business">
+
+  <main id="the-business">
       <article class="banner">
         <div class="slogan-box">
           <div class="slogan-text">
@@ -37,5 +32,9 @@
         </div>
       </div>
     </article>
-  </body>
-</html>
+  </main>
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
+      $('.dog-link').on('mouseenter', function () {
+        $('.dog-link').css('background-color', 'red');
+      })
+  </script>
