geolocate when user hits search button

--- a/app/views/search/dogs/show.html.erb
+++ b/app/views/search/dogs/show.html.erb
@@ -21,7 +21,7 @@
           </article>
         </section>
         <article class="description marg-top-20 color-gray">
-          <div class="underline marg-left-10 marg-bottom-10 font-18">Profile</div>
+          <div class="underline marg-left-10 marg-bottom-10 font-18">Bio</div>
           <div class="attributes-show font-18"> <%= presenter.dog.description %></div>
         </article>
      </article>
