--- a/app/views/search/cats/index.html.erb
+++ b/app/views/search/cats/index.html.erb
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  </head>
-  <body id="pet-search">
+
+  <main id="pet-search">
     <section>
       <form class="search-form" action="/search/cats" method="get">
+        <input id="latitude" type="hidden" name="latitude"></input>
+        <input id="longitude" type="hidden" name="longitude"></input>
         <div class="search-title">Breed</div>
         <select class="dropdown" name="breed">
           <option class="option" value="">Any</option>
@@ -62,6 +58,21 @@
       </section>
 
     </section>
+  </main>
+<script type="text/javascript">
+  var x = document.getElementById("latitude");
+  var y = document.getElementById("longitude");
+  function getLocation() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+    } else {
+        x.innerHTML = "Geolocation is not supported by this browser.";
+    }
+  }
+  function showPosition(position) {
+    x.value = position.coords.latitude
+    y.value = position.coords.longitude
+  }
 
-  </body>
-</html>
+  window.onload = getLocation;
+</script>
