--- a/app/views/search/dogs/index.html.erb
+++ b/app/views/search/dogs/index.html.erb
@@ -1,67 +1,78 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  </head>
-  <body id="pet-search">
-<section>
-  <form class="search-form" action="/search/dogs" method="get">
-    <div class="search-title">Breed</div>
-    <select class="dropdown" name="breed">
-      <option class="option" value="">Any</option>
-      <% presenter.breeds.each do |breed| %>
-      <option value="<%= breed.name %>"><%= breed.name %></option>
-      <% end %>
-    </select>
-    <div class="search-title">Age</div>
-    <select class="dropdown" name="age">
-      <option class="option" value="">Any</option>
-      <option value="Baby">Baby</option>
-      <option value="Young">Young</option>
-      <option value="Adult">Adult</option>
-      <option value="Senior">Senior</option>
-    </select>
-    <div class="search-title">Size</div>
-    <select class="dropdown" name="size">
-      <option value="">Any</option>
-      <option value="S">Small</option>
-      <option value="M">Medium</option>
-      <option value="L">Large</option>
-      <option value="XL">XL</option>
-    </select>
-    <div class="search-title">Gender</div>
-    <select class="dropdown" name="sex">
-      <option value="">Any</option>
-      <option value="M">Male</option>
-      <option value="F">Female</option>
-    </select>
-    <input class="dropdown submit" type="submit" value="Search">
-  </form>
-  <section id="search-area">
 
-  <% presenter.dogs.each do |dog| %>
-    <a class="card-link" href="/search/dogs/<%= dog.id %>">
-        <article class="pet-box">
-            <img class="thumbnail-pic" src="<%= dog.photos.thumbnail_photo %>" alt="">
-          <article class="pet-thumb-info">
-            <div class="pet-name"><%= dog.name %></div>
-            <div>
+<main id="pet-search">
+  <section>
+    <form class="search-form" action="/search/dogs" method="get">
+      <input id="latitude" type="hidden" name="latitude"></input>
+      <input id="longitude" type="hidden" name="longitude"></input>
+      <div class="search-title">Breed</div>
+      <select class="dropdown" name="breed">
+        <option class="option" value="">Any</option>
+        <% presenter.breeds.each do |breed| %>
+          <option value="<%= breed.name %>"><%= breed.name %></option>
+        <% end %>
+      </select>
+      <div class="search-title">Age</div>
+      <select class="dropdown" name="age">
+        <option class="option" value="">Any</option>
+        <option value="Baby">Baby</option>
+        <option value="Young">Young</option>
+        <option value="Adult">Adult</option>
+        <option value="Senior">Senior</option>
+      </select>
+      <div class="search-title">Size</div>
+      <select class="dropdown" name="size">
+        <option value="">Any</option>
+        <option value="S">Small</option>
+        <option value="M">Medium</option>
+        <option value="L">Large</option>
+        <option value="XL">XL</option>
+      </select>
+      <div class="search-title">Gender</div>
+      <select class="dropdown" name="sex">
+        <option value="">Any</option>
+        <option value="M">Male</option>
+        <option value="F">Female</option>
+      </select>
+      <input class="dropdown submit" type="submit" value="Search">
+    </form>
+    <section id="search-area">
 
-              <% dog.breeds.each do |breed| %>
-                <div class="attribute  small"><%= breed %></div>
-              <% end %>
-            </div>
-            <div class="attribute"><%= dog.age %> <%= dog.sex %></div>
-            <div class="attribute"><%= dog.contact.city_state_zip %></div>
+    <% presenter.dogs.each do |dog| %>
+      <a class="card-link" href="/search/dogs/<%= dog.id %>">
+          <article class="pet-box">
+              <img class="thumbnail-pic" src="<%= dog.photos.thumbnail_photo %>" alt="">
+            <article class="pet-thumb-info">
+              <div class="pet-name"><%= dog.name %></div>
+              <div>
+
+                <% dog.breeds.each do |breed| %>
+                  <div class="attribute  small"><%= breed %></div>
+                <% end %>
+              </div>
+              <div class="attribute"><%= dog.age %> <%= dog.sex %></div>
+              <div class="attribute"><%= dog.contact.city_state_zip %></div>
+
+          </article>
         </article>
-      </article>
-    </a>
-  <% end %>
+      </a>
+    <% end %>
+    </section>
   </section>
+</main>
+<script type="text/javascript">
+  var x = document.getElementById("latitude");
+  var y = document.getElementById("longitude");
+  function getLocation() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+    } else {
+        x.innerHTML = "Geolocation is not supported by this browser.";
+    }
+  }
+  function showPosition(position) {
+    x.value = position.coords.latitude
+    y.value = position.coords.longitude
+  }
 
-</section>
-
-  </body>
-</html>
+  window.onload = getLocation;
+</script>
