fix animals method in service to change to the correct data type if not correct data type

--- a/app/views/search/cats/index.html.erb
+++ b/app/views/search/cats/index.html.erb
@@ -42,7 +42,7 @@
             <article class="pet-box">
                 <img class="thumbnail-pic" src="<%= cat.photos.thumbnail_photo %>" alt="">
               <article class="pet-thumb-info">
-                <div class="pet-name"><%= cat.name %></div>
+                <div class="pet-name"><%= cat.short_name %></div>
                 <div>
 
                   <% cat.breeds.each do |breed| %>
