--- a/app/views/search/dogs/index.html.erb
+++ b/app/views/search/dogs/index.html.erb
@@ -42,16 +42,14 @@
           <article class="pet-box">
               <img class="thumbnail-pic" src="<%= dog.photos.thumbnail_photo %>" alt="">
             <article class="pet-thumb-info">
-              <div class="pet-name"><%= dog.name %></div>
+              <div class="pet-name"><%= dog.short_name %></div>
               <div>
-
                 <% dog.breeds.each do |breed| %>
                   <div class="attribute  small"><%= breed %></div>
                 <% end %>
               </div>
               <div class="attribute"><%= dog.age %> <%= dog.sex %></div>
               <div class="attribute"><%= dog.contact.city_state_zip %></div>
-
           </article>
         </article>
       </a>
