add book class, and book service

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <%= render "shared/#{presenter.current_navbar}" %>
+    <%= render "shared/#{@presenter.current_navbar}" %>
     <%= yield %>
   </body>
 </html>
