--- a/app/views/search/cats/show.html.erb
+++ b/app/views/search/cats/show.html.erb
@@ -30,19 +30,27 @@
 
         </div>
         <div class="shelter-info-box">
-          <div><%= @presenter.shelter.name %></div>
-          <div><%= @presenter.shelter.phone %></div>
-          <div><%= @presenter.shelter.email %></div>
-          <div><%= @presenter.shelter.latitude %></div>
-          <div><%= @presenter.shelter.longitude %></div>
+          <div><%= @presenter.shelter.name if @presenter.shelter %></div>
+          <div><%= @presenter.cat.contact.number %></div>
+          <div><%= @presenter.cat.contact.email %></div>
+          <div> <%= @presenter.cat.contact.full_address %></div>
         </div>
       </section>
      </aside>
    </section>
+   <section>
+     <% @presenter.books.each do |book| %>
+        <img src="<%= book.image %>" alt="">
+        <h3><%= book.title %></h3>
+        <div><%= book.date %></div>
+        <div class=""><%= book.snippet %></div>
+        <a href="<%= book.link %>">View Book</a>
+     <% end %>
+   </section>
  </main>
   <script>
-    var long = <%= @presenter.shelter.longitude %>
-    var lat = <%= @presenter.shelter.latitude %>
+    var lat = <%= @presenter.shelter_coordinates[0] %>
+    var long = <%= @presenter.shelter_coordinates[1] %>
     mapboxgl.accessToken = "pk.eyJ1Ijoic2RtYWxlazQ0IiwiYSI6ImNqbHlhc3IxZzA4ZGsza3BpeGU1aGV0MXgifQ.9MGdnq_vndt0cbN1Q5ybbA";
     var map = new mapboxgl.Map({
       container: 'shelter-map',
