--- a/app/views/search/cats/show.html.erb
+++ b/app/views/search/cats/show.html.erb
@@ -1,51 +1,61 @@
 
   <main class="font-black ">
     <section class="pet-show">
-      <article class="pet-show-card">
-        <section class="info-and-photo">
-          <img class="big-photo" src="<%= @presenter.cat.photos.profile_photo %>" alt="">
-          <article class="basic-info">
-            <div class="pet-name-show"><%= @presenter.cat.name %></div>
-            <article class="">
-              <% @presenter.cat.breeds.each do |breed| %>
-                <div class="attributes-show"><%= breed %></div>
-              <% end %>
-              <div class="attributes-show"><%= @presenter.cat.age %> - <%= @presenter.cat.sex %> - <%= @presenter.cat.size %> sized</div>
-              <div class="attributes-show"><%= @presenter.cat.contact.full_address %></div>
+      <aside class="left-section">
+        <article class="pet-show-card">
+          <section class="info-and-photo">
+            <img class="big-photo" src="<%= @presenter.cat.photos.profile_photo %>" alt="">
+            <article class="basic-info">
+              <div class="pet-name-show"><%= @presenter.cat.name %></div>
+              <article class="">
+                <% @presenter.cat.breeds.each do |breed| %>
+                  <div class="attributes-show"><%= breed %></div>
+                <% end %>
+                <div class="attributes-show"><%= @presenter.cat.age %> - <%= @presenter.cat.sex %> - <%= @presenter.cat.size %> sized</div>
+                <div class="attributes-show"><%= @presenter.cat.contact.full_address %></div>
+              </article>
+              <article class="">
+                <div class="attributes-show underline">Contact Info</div>
+                <div class="attributes-show"><%= @presenter.cat.contact.number %></div>
+                <div class="attributes-show"><%= @presenter.cat.contact.email %></div>
+              </article>
             </article>
-            <article class="">
-              <div class="attributes-show underline">Contact Info</div>
-              <div class="attributes-show"><%= @presenter.cat.contact.number %></div>
-              <div class="attributes-show"><%= @presenter.cat.contact.email %></div>
-            </article>
+          </section>
+          <article class="description marg-top-20 color-gray">
+            <div class="underline marg-left-10 marg-bottom-10 font-18">Bio</div>
+            <div class="attributes-show font-18"> <%= @presenter.cat.description %></div>
           </article>
-        </section>
-        <article class="description marg-top-20 color-gray">
-          <div class="underline marg-left-10 marg-bottom-10 font-18">Bio</div>
-          <div class="attributes-show font-18"> <%= @presenter.cat.description %></div>
         </article>
-     </article>
-     <aside class="shelter-map-box">
-        <div id="shelter-map">
+        <article class="books-outer">
+          <div class="books-heading">Here Are Some Great Resources about owning a <%= @presenter.cat.breeds.first %> <%= @presenter.animal_type.capitalize %></div>
+          <% @presenter.books.each do |book| %>
+            <div class="book-box">
+              <img class="book-image"src="<%= book.image %>" alt="">
+              <div class="book-side-car">
+                <div class="book-title"><%= book.title %></div>
+                <div><%= book.date %></div>
+                <div class=""><%= book.snippet %></div>
+                <a href="<%= book.link %>">View Book</a>
+              </div>
+            </div>
+          <% end %>
+        </article>
+      </aside>
 
-        </div>
-        <div class="shelter-info-box">
-          <div><%= @presenter.shelter.name if @presenter.shelter %></div>
-          <div><%= @presenter.cat.contact.number %></div>
-          <div><%= @presenter.cat.contact.email %></div>
-          <div> <%= @presenter.cat.contact.full_address %></div>
-        </div>
-      </section>
-     </aside>
-   </section>
-   <section>
-     <% @presenter.books.each do |book| %>
-        <img src="<%= book.image %>" alt="">
-        <h3><%= book.title %></h3>
-        <div><%= book.date %></div>
-        <div class=""><%= book.snippet %></div>
-        <a href="<%= book.link %>">View Book</a>
-     <% end %>
+        <aside class="shelter-map-box">
+          <div id="shelter-map">
+
+          </div>
+          <div class="shelter-info-box">
+            <div class="shelter-title"><%= @presenter.shelter.name if @presenter.shelter %></div>
+            <div><%= @presenter.cat.contact.number %></div>
+            <div><%= @presenter.cat.contact.email %></div>
+            <div> <%= @presenter.cat.contact.full_address %></div>
+          </div>
+        </aside>
+    </section>
+    <section>
+
    </section>
  </main>
   <script>
