--- a/app/assets/stylesheets/search/dogs/show.css
+++ b/app/assets/stylesheets/search/dogs/show.css
@@ -187,3 +187,9 @@
   background-color: white;
   font-size: 20px;
 }
+
+.text-center {
+  text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
+}
